[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/exchange_popup.gd" type="Script" id=1]
[ext_resource path="res://entities/Popup.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/puzzles/dropbox/dropbox_popup0001.png" type="Texture" id=3]
[ext_resource path="res://graphics/puzzles/dropbox/dropbox_popup0000.png" type="Texture" id=4]
[ext_resource path="res://graphics/puzzles/dropbox/dropbox_popup0002.png" type="Texture" id=5]
[ext_resource path="res://graphics/puzzles/dropbox/dropbox_popup0003.png" type="Texture" id=6]
[ext_resource path="res://rooms/objects/KeyInventory.tscn" type="PackedScene" id=7]

[node name="ExchangePopup" type="Node2D"]
z_index = 1000
script = ExtResource( 1 )

[node name="Popup" parent="." instance=ExtResource( 2 )]
layer = 0

[node name="Fader" parent="Popup/Popup" index="0"]
visible = false
margin_top = 0.59874
margin_bottom = 360.599
mouse_filter = 2

[node name="opened_a" type="TextureRect" parent="Popup/Popup/Content" index="0"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="Area2D2" type="Area2D" parent="Popup/Popup/Content/opened_a"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Popup/Popup/Content/opened_a/Area2D2"]
polygon = PoolVector2Array( 223.117, 112.947, 201.562, 117.737, 203.957, 164.438, 225.511, 166.235 )

[node name="closed_a" type="TextureRect" parent="Popup/Popup/Content" index="1"]
visible = false
margin_right = 403.0
margin_bottom = 283.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Popup/Popup/Content/closed_a"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Popup/Popup/Content/closed_a/Area2D"]
polygon = PoolVector2Array( 332.087, 38.7034, 326.099, 121.329, 374.597, 249.459, 378.19, 186.592 )

[node name="closed_b" type="TextureRect" parent="Popup/Popup/Content" index="2"]
visible = false
margin_right = 403.0
margin_bottom = 283.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Popup/Popup/Content/closed_b"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Popup/Popup/Content/closed_b/Area2D"]
polygon = PoolVector2Array( 79.4715, 111.812, 73.5007, 38.8359, 26.3978, 187.442, 35.0223, 227.911 )

[node name="opened_b" type="TextureRect" parent="Popup/Popup/Content" index="3"]
visible = false
margin_right = 403.0
margin_bottom = 283.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="Area2D2" type="Area2D" parent="Popup/Popup/Content/opened_b"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Popup/Popup/Content/opened_b/Area2D2"]
polygon = PoolVector2Array( 184.199, 115.342, 205.154, 118.336, 203.358, 163.84, 186.594, 163.84 )

[node name="Table" parent="Popup/Popup/Content" index="4" instance=ExtResource( 7 )]
position = Vector2( 55.1622, 88.1975 )

[node name="Dropbox" parent="Popup/Popup/Content" index="5" instance=ExtResource( 7 )]
position = Vector2( 228.197, 89.3949 )
[connection signal="input_event" from="Popup/Popup/Content/opened_a/Area2D2" to="." method="_on_openeddrawer_input_event"]
[connection signal="input_event" from="Popup/Popup/Content/closed_a/Area2D" to="." method="_on_closeddrawer_input_event"]
[connection signal="input_event" from="Popup/Popup/Content/closed_b/Area2D" to="." method="_on_closeddrawer_input_event"]
[connection signal="input_event" from="Popup/Popup/Content/opened_b/Area2D2" to="." method="_on_openeddrawer_input_event"]

[editable path="Popup"]
